------------------
Features:
- ALL: Prevent sending an invoice twice at the same moment. Some online payment
  methods can trigger multiple status updates within a short time interval,
  possibly triggering sending the invoice a 2nd time while the 1st is still
  being executed. We are adding measures to prevent and, if it still occurs,
  recognise this situation, so we can warn about it.

5.6.1 (2019-04-01)
------------------
Bugs:
- ALL: Facturen voor klanten buiten de EU waar gewoon btw wordt geheven kregen
  niet factuurtype 1 toegewezen.
- MA: kolom 'updated' van tabel 'acumulus_entry' kreeg geen waarde. Niet bij
  toevoegen en niet bij updaten.

Features:
- WC: Added more support for WC_Bookings (resource info is now available).
- MA1: Support for betaalkosten van de MultiSafePay.com module toegevoegd.
- ALL: Recalculate unitpriceinc to get accurate line totals.
- WC/MA/PS: (These are the web shops that do support credit notes.): "Property
  source" 'originalInvoiceOrder' in ere hersteld. Deze info is af en toe toch
  nodig. Deze property verwijst nu naar de Acumulus wrapper om de
  (oorspronkelijke) order heen. NB: deze property bestaat alleen in shops die
  creditfacturen ondersteunen.
- WC/MA/PS: (These are the web shops that do support credit notes.): "Property
  sources" 'refundedInvoceSource' en 'refundedOrder' toegevoegd. In
  tegenstelling tot de property sources 'originalInvouiceSource' en
  'originalOrder' hebben deze nieuwe property sources alleen een waarde als het
  daadwerkelijk een refund betreft.
- ALL: Standaard waarde voor het veld 'toelichting' bevat voor een creditfactuur
  nu ook een verwijzing naar de oorspronkelijke bestelling.
- WC/MA/PS: (These are the web shops that do support credit notes.): Het niet
  automatisch verzenden van een creditfactuur werd niet duidelijk gelogd.
- ALL: Een helptekst over factuurnummers verbeterd.

5.6.0 (2019-03-13)
------------------
Bugs: